<resources>
    <string name="app_name">ModooTimer</string>

    <string name="BasicTimer">Basic</string>
    <string name="TimerList">List</string>

    <string name="hour">time</string>
    <string name="minute">min</string>
    <string name="sec">sec</string>

    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="cancel">cancel</string>
    <string name="done">done</string>
    <string name="replay">restart</string>

    <string name="zero" translatable="false">0</string>
    <string name="colon" translatable="false">:</string>
    <string name="addlist" translatable="false">addList</string>

    <string name="add">Your Timer</string>
    <string name="name">Timer name</string>
    <string name="save">save</string>

    <string name="saveFailure">Fail to save data. Please try again.</string>
    <string name="saveSuccess">Success to save data.</string>

    <string name="UserName">Setting your name!</string>
    <string name="askUserName">Input your ID.</string>
    <string name="askUserPassword">Please Input your password.</string>
    <string name="askUserPassword_again">Please Input your password again.</string>
    <string name="nameInfo">"User name is used to save your Timer. "</string>

    <string name="namechck_true">This ID is available.</string>
    <string name="namechck_false">This ID already exists.</string>
    <string name="namechckInfo">Please check your Id.</string>
    <string name="passwordchckInfo">You must enter the same password.</string>
    <string name="pwchck_true">The Password match.</string>
    <string name="pwchck_false">Password do not match.</string>

    <string name="Title" translatable="false">Title</string>

    <string name="InfoLogin">Log in to save your timer.</string>
    <string name="idInfo">your ID</string>
    <string name="pwInfo">your password</string>
    <string name="logout">logout</string>
    <string name="login">login</string>
    <string name="gotosignup">Go for a simple membership >></string>
    <string name="askFill">Please fill in the blanks.</string>
    <string name="Loginfailed">Login failed. Please check your login information.</string>

    <string name="signUpInfo">Simple Signup</string>

    <string name="deleteInfo">Delete Timer</string>
    <string name="askDelete">Are you sure you want to delete  \"%1$s\" Timer ?</string>

    <string name="selectOff">PRIVATE</string>
    <string name="selectON">PUBLIC</string>
    <string name="onOff">ON/OFF</string>

    <string name="number" translatable="false">%02d</string>
    <string name="Itemcnt">Number of your Timer : (%02d)</string>

    <string name="Alarm">Alarm</string>
    <string name="vibration">vibration</string>
    <string name="sound">sound</string>

</resources>