<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Toplayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_rectangle"
    android:backgroundTint="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp"
    tools:context=".LoginDialog">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/InfoLogin"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_margin="20dp"
        android:id="@+id/relay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title">

        <EditText
            android:id="@+id/id_Textview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/idInfo"
            android:drawableLeft="@drawable/baseline_perm_identity_24"
            android:drawablePadding="10dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password_Textview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/pwInfo"
            android:drawableLeft="@drawable/baseline_password_24"
            android:drawablePadding="10dp"
            android:layout_below="@+id/id_Textview"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/gotosignup"
        android:textColor="@color/black"
        android:shadowRadius="7.0"
        android:shadowDx="7.0"
        android:shadowDy="7.0"
        android:shadowColor="@color/gray"
        android:background="#00FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/relay"
        app:layout_constraintTop_toBottomOf="@+id/relay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn">

        <Button
            android:id="@+id/cancel_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/login" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>