<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Toplayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_rectangle"
    android:backgroundTint="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp"
    tools:context=".AddUserNameDialog">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/UserName"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_margin="20dp"
        android:id="@+id/relay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title">

        <EditText
            android:id="@+id/NameEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/checkBtn"
            android:hint="@string/askUserName"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/checkBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/baseline_check_box_24"
            android:backgroundTint="@color/lightGreen"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/NameInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/nameInfo"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/relay"
        app:layout_constraintTop_toBottomOf="@+id/relay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameInfo">

        <Button
            android:id="@+id/cancel_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/cancle" />

        <Button
            android:id="@+id/save_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>